--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Balasubramanian Life insurance, small savings, general insurance and mutual funds"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/balaIcon.ico" />
     <!--
